--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.5.0",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.17",
@@ -21,7 +22,8 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-facebook-token": "^3.3.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^26.0.1",
