--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,22 @@
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@welldone-software/why-did-you-render": "^4.2.5",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
+    "google-map-react": "^1.1.7",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
+    "react-google-places-autocomplete": "^2.0.6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
