add: orders component + vertical tabs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,17 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
+    "notistack": "^0.9.17",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
-    "react-google-places-autocomplete": "^2.0.6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "styled-components": "^5.1.1",
     "yup": "^0.29.1"
   },
   "scripts": {
