--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "passport-facebook": "^3.0.0",
     "passport-facebook-token": "^3.3.0",
     "passport-jwt": "^4.0.0",
+    "redis": "^3.0.2",
+    "socket.io": "^2.3.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
