--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1",
     "yup": "^0.29.1"
   },
@@ -51,7 +52,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001",
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.0.0"
   }
