--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.2",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
@@ -17,6 +18,9 @@
     "express-validator": "^6.5.0",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "lodash.permutations": "^1.0.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.17",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
